--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,18 @@
+// {
+//   "extends": [
+//     "@rocketseat/eslint-config/next", 
+//     "next/core-web-vitals"
+//   ],
+//   "rules": {
+//     "prettier/prettier": ["error", {
+//       "tabWidth": 4
+//     }]
+//   }
+// }
 {
-  "extends": [
-    "@rocketseat/eslint-config/next", 
-    "next/core-web-vitals"
-  ],
+  "extends": "next",
   "rules": {
-    "@typescript-eslint/no-var-requires": "off"
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
