--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natashapsi",
+  "name": "c2di",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "next": "^14.2.15",
     "phosphor-react": "^1.4.1",
