--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.1",
+    "@types/yup": "^0.32.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "next": "^14.2.15",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-intersection-observer": "^9.13.1",
-    "sitemap": "^8.0.0"
+    "sitemap": "^8.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
