--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.9.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/react-icons": "^3.0.0",
     "@types/yup": "^0.32.0",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.9",
     "moment": "^2.30.1",
     "next": "^14.2.15",
