middlewares, proejct-manager e create project

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ AUTH0_ISSUER_BASE_URL='https://dev-pzivs8swerlhnydf.us.auth0.com'
 AUTH0_CLIENT_ID='qRYSCWZ2GQhFgaWv0HYlkQV6CM4jFQ2B'
 AUTH0_CLIENT_SECRET='1zEEr7Bjdacmo_yl67vhInjtFIJO6aO7n-VqAZXs0UxZTPIPdimrCGLeQQmalNAv'
 AUTH0_AUDIENCE='https://auth.c2di.awer.co'
+
+ADMINISTRATOR = 'ADMINISTRATOR'
+PROJECT_MANAGER = 'PROJECT_MANAGER'
+INVESTOR = 'INVESTOR'
