create project e paginação de projects

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ AUTH0_AUDIENCE='https://auth.c2di.awer.co'
 ADMINISTRATOR = 'ADMINISTRATOR'
 PROJECT_MANAGER = 'PROJECT_MANAGER'
 INVESTOR = 'INVESTOR'
+
+MAX_SIZE_INPUT = '5242880'
