--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "framer-motion": "^11.11.9",
     "moment": "^2.30.1",
     "next": "^14.2.15",
+    "next-themes": "^0.4.3",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
