--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-photo-sphere-viewer": "^6.0.0",
     "react-responsive-carousel": "^3.2.23",
+    "recharts": "^2.13.3",
     "sitemap": "^8.0.0",
     "swiper": "^11.1.15",
     "yup": "^1.4.0"
