--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "cookies-next": "4.3.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^11.11.9",
     "moment": "^2.30.1",
