spaces de images

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ PROJECT_MANAGER = 'PROJECT_MANAGER'
 INVESTOR = 'INVESTOR'
 
 MAX_SIZE_INPUT = '5242880'
+SPACES_ACCESS_KEY='DO801ALEYFGPTURP3MPK'
+SPACES_SECRET_KEY='07B+aTFc7E5aQKeTF0cacdv6QttneaADiRJfYmO2DI8'
