--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/react-icons": "^3.0.0",
     "@types/yup": "^0.32.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "cookies-next": "4.3.0",
     "crypto-js": "^4.2.0",
