modo proprietario ok

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ BACKEND_URL='https://c2diserver.awer.co/'
 ADMINISTRATOR = 'ADMINISTRATOR'
 PROJECT_MANAGER = 'PROJECT_MANAGER'
 INVESTOR = 'INVESTOR'
+PROPRIETARIO = 'PROPRIETARIO'
 
 MAX_SIZE_INPUT = '5242880'
 SPACES_ACCESS_KEY='DO801ALEYFGPTURP3MPK'
