--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@types/crypto-js": "^4.2.2",
     "@types/react-icons": "^3.0.0",
+    "@types/uuid": "^10.0.0",
     "@types/yup": "^0.32.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
@@ -39,6 +40,7 @@
     "recharts": "^2.13.3",
     "sitemap": "^8.0.0",
     "swiper": "^11.1.15",
+    "uuid": "^11.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
